# T-BOT-the-Topological-Navigation-Robot-for-Optimized-Multi-Agent-Exploration

./: .gitattributes  README.md
diem_turtlebot_ws/src/diem_gazebo/: generate_gazebo_world.py
diem_turtlebot_ws/src/diem_gazebo/worlds/: diem_map.sdf
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/: README.md  navigation_hardware_limitation.json  package.xml  setup.cfg  setup.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/fleet_turtlebot4_navigation/: backup_master_navigation_node.py  graph_partitioning.py  master_callbacks.py  master_navigation_node copy.py  master_navigation_node.py  path_calculation.py  publish_waypoints.py  simulated_slave_navigation_node.py  slave_navigation_node.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/fleet_turtlebot4_navigation/master/: graph_partitioning.py  graph_utils.py  heartbeat_manager.py  master_callbacks.py  master_navigation_node.py  path_calculation.py  slave_state.py  utils.py  waypoint_manager.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/fleet_turtlebot4_navigation/simulated_slave/: __init__.py  simulated_slave_navigation_node.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/fleet_turtlebot4_navigation/slave/: simulated_slave_navigation_node.py  slave_callbacks.py  slave_navigation_node compleot.py  slave_navigation_node.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/launch/: master_navigation_launch.py  slave_navigation_launch.py  slave_navigation_simulator_launch.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map/: navigation_hardware_limitation.json
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map/map_transformation_phase/: visualize_graph.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map/map_transformation_phase/diem_map_topological/: diem_map_pixel_to_map_transformations.txt  diem_map_with_waypoints.pgm
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map/map_transformation_phase/graph/: graph_partitioning.py  navigation_graph_graph_map.pgm  navigation_graph_simplified.json
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map_transformation_phase/: README.md  build_graph.py  requirements.txt  result_graph copy.json  result_graph.json  result_graph_original.json  result_graph_reduced.json  visualize_graph.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map_transformation_phase/code/: config.py  coordinate_transformer.py  create_topological_map.py  graph_creation.py  image_processing.py  visualization.py
diem_turtlebot_ws/src/fleet_turtlebot4_navigation/map_transformation_phase/graph/: navigation_graph.json  navigation_hardware_limitation_graph_map.pgm  result_graph copy_graph_map.pgm
diem_turtlebot_ws/src/launch/: map_server_launch.py  multi_robot_navigation_launch.py
diem_turtlebot_ws/src/map/: README.md  linee_voronoi.pgm  linee_voronoi.yaml  map_server_params.yaml  mappa_binaria.pgm  mappa_binaria.yaml  mappa_topologica_scheletro.pgm  mappa_topologica_scheletro.yaml  miglioria.py  occupazione_originale.pgm  occupazione_originale.yaml  scheletrizza.py  scheletro_voronoi.yaml  topological_map.py
diem_turtlebot_ws/src/map/navigation_phase/: README.md  (+2 more)
diem_turtlebot_ws/src/map_transformation_phase/: README.md  build_graph.py  visualize_graph.py
diem_turtlebot_ws/src/multi_nav_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
diem_turtlebot_ws/src/multi_nav_pkg/launch/: backup_master_launch.py  master_launch.py  slave_launch.py
diem_turtlebot_ws/src/multi_nav_pkg/msg/: NavigationStatus.msg  Waypoint.msg
diem_turtlebot_ws/src/multi_nav_pkg/multi_nav_pkg/: backup_master_navigation_node.py  graph_partitioning.py  master_navigation_node.py  slave_navigation_node.py
diem_turtlebot_ws/src/multi_robot_pkg_navigation/: package.xml  setup.cfg  setup.py
diem_turtlebot_ws/src/multi_robot_pkg_navigation/launch/: master_launch.py  multi_robot_navigation_launch.py  slave_launch.py
diem_turtlebot_ws/src/multi_robot_pkg_navigation/map/map_transformation_phase/: topological_map.py
diem_turtlebot_ws/src/multi_robot_pkg_navigation/map/map_transformation_phase/diem_map_topological/: diem_map_topologica_scheletro_nodi.pgm
diem_turtlebot_ws/src/multi_robot_pkg_navigation/map/map_transformation_phase/graph/: graph_partitioning.py  navigation_graph_simplified_graph_map.pgm  navigation_hardware_limitation_graph_map.pgm
diem_turtlebot_ws/src/multi_robot_pkg_navigation/nav_pkg/: CMakeLists.txt  package.xml  setup.py
diem_turtlebot_ws/src/multi_robot_pkg_navigation/nav_pkg/nav_pkg/: navigation_hardware_limitation.json  robot_navigation_node.py  robot_navigation_node_funzionante.py
diem_turtlebot_ws/src/nav_pkg/: package.xml  setup.py
diem_turtlebot_ws/src/test/: dcpp_test.py  test_graph_partitioning.py
diem_turtlebot_ws/src/test_python_files/: README.md  dcpp_test.py  graph_traversal_time_calculator.py  path_calculation.py  test_graph_partitioning.py
install/: local_setup.sh  setup.sh
log/: latest_build
(+60 files in other folders)
