<?xml version="1.0"?>
<package format="3">
  <name>multi_nav_pkg</name>
  <version>0.0.1</version>
  <description>Master-Slave Navigation Package for Multi-TurtleBot4</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot4_navigation</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dipendenze Python aggiuntive -->
  <exec_depend>networkx</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
